# alacritty

alacritty/: Cargo.toml
alacritty/src/: clipboard.rs  main.rs
alacritty/src/display/: window.rs
alacritty_config_derive/: Cargo.toml
alacritty_terminal/: Cargo.toml
