[package]
name = "alacritty"
version = "0.11.0-dev"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
description = "A fast, cross-platform, OpenGL terminal emulator"
readme = "README.md"
homepage = "https://github.com/alacritty/alacritty"
edition = "2021"
rust-version = "1.56.0"

[dependencies.alacritty_terminal]
path = "../alacritty_terminal"
version = "0.17.0-dev"
default-features = false

[dependencies.alacritty_config_derive]
path = "../alacritty_config_derive"
version = "0.1.0"

[dependencies]
clap = { version = "3.1.15", features = ["derive"] }
log = { version = "0.4.17", features = ["std", "serde"] }
fnv = "1.0.7"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
serde_json = "1.0.81"
glutin = { git = "https://github.com/StratusFearMe21/glutin", default-features = false, features = ["serde"] }
notify = "4.0.17"
parking_lot = "0.12.0"
crossfont = { version = "0.3.2", features = ["force_system_fontconfig"] }
copypasta = { path = "../../copypasta", default-features = false }
libc = "0.2.125"
unicode-width = "0.1.9"
bitflags = "1.3.2"
dirs = "4.0.0"

[build-dependencies]
gl_generator = "0.14.0"

[dev-dependencies]
clap_complete = "3.1.3"

[target.'cfg(not(windows))'.dependencies]
xdg = "2.4.1"

[target.'cfg(not(target_os = "macos"))'.dependencies]
png = { version = "0.17.5", default-features = false, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
raw-window-handle = "0.4.3"
cocoa = "0.24.0"
objc = "0.2.7"

[target.'cfg(not(any(target_os="windows", target_os="macos")))'.dependencies]
x11-dl = { version = "2.19.1", optional = true }
wayland-client = { version = "0.29.4", features = ["dlopen"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["impl-default", "wincon"] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.7.2"

[features]
default = ["wayland", "x11", "kmsdrm"]
x11 = ["copypasta/x11", "glutin/x11", "x11-dl", "png"]
wayland = ["copypasta/wayland", "glutin/wayland", "glutin/wayland-dlopen", "wayland-client"]
kmsdrm = ["glutin/kmsdrm"]
nightly = []
