[package]
name = "alacritty_terminal"
version = "0.17.0-dev"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
description = "Library for writing terminal emulators"
readme = "../README.md"
homepage = "https://github.com/alacritty/alacritty"
edition = "2021"
rust-version = "1.56.0"

[dependencies.alacritty_config_derive]
path = "../alacritty_config_derive"
version = "0.1.0"

[dependencies]
libc = "0.2.125"
bitflags = "1.3.2"
parking_lot = "0.12.0"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_yaml = "0.8.24"
vte = { version = "0.10.1", default-features = false }
mio = "0.6.20"
mio-extras = "2.0.6"
log = "0.4.17"
unicode-width = "0.1.9"
base64 = "0.13.0"
regex-automata = "0.1.0"
dirs = "4.0.0"

[target.'cfg(unix)'.dependencies]
nix = "0.24.1"
signal-hook = "0.3.13"
signal-hook-mio = { version = "0.2.3", features = ["support-v0_6"] }

[target.'cfg(windows)'.dependencies]
miow = "0.4.0"
winapi = { version = "0.3.9", features = [
	"impl-default", "basetsd", "libloaderapi", "minwindef", "ntdef", "processthreadsapi", "winbase",
		"wincon", "wincontypes", "winerror", "winnt", "winuser", "consoleapi",
] }
mio-anonymous-pipes = "0.2.0"

[dev-dependencies]
serde_json = "1.0.81"
